fix docker compose
